@@ -1,3 +1,7 @@
+2009-02-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geotiff_proj4.c: Fix some buffer overflow holes (#9).
+
 2009-02-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_simpletags.c: compute "count" for ascii tag values.
